--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/mysql": "^2.15.5",
     "@types/node": "^11.10.4",
+    "@types/passport": "^1.0.0",
+    "@types/passport-http-bearer": "^1.0.33",
+    "@types/passport-local": "^1.0.33",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
@@ -24,9 +29,11 @@
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "mysql": "^2.16.0",
     "node-sass": "^4.11.0",
     "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
