--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "cors": "^2.8.5",
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
