--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.4",
     "@types/webpack-env": "^1.13.8",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.3",
